--- a/index.html
+++ b/index.html
@@ -1,41 +1,68 @@
 <p><strong>Xing Hu (胡杏)</strong></p>
-
-<p>Email: huxing@ict.ac.cn </p>
-
+<p>Email: <a href='mailto:huxing@ict.ac.cn' target='_blank' class='url'>huxing@ict.ac.cn</a> </p>
+<p>&nbsp;</p>
 <h2>Education</h2>
-
 <p><strong>Ph.D.</strong>	State Key Lab of Computer Architecture. Institute of Computing Technology (ICT), University of Chinese Academy of Sciences (UCAS)  	2009.09 - 2014.07 </p>
-
 <p><strong>B.S.</strong>  	Computing Science and technology Department. HuaZhong University of Science &amp; Technology (HUST)  	2005.09 - 2009. 07 </p>
-
 <h2>Professional Experience</h2>
-
 <p><strong>Associate Professor</strong> Chinese Academy of Sciences, Institute of Computing Technology (ICT)  2020.04 -- present</p>
-
 <p><strong>Postdoc</strong>				Department of Electrical and Computer Engineering, University of California, Santa Barbara		2017.01 –– 2020.03</p>
-
 <p><strong>Research Scientist</strong> 	Shannon Cognitive Lab, HUAWEI Technologies	2014. 07 –– 2016.12</p>
-
 <h2>Research Interests</h2>
-
 <p> My research focuses on efficiency and security of domain specific architectures. Specifically, my current interests include: technique-driven and application-driven architecture design, intelligent memory systems, and machine learning system security.</p>
-
 <h2>Publications</h2>
+<ul>
+<li><strong>Xing Hu</strong>, Ling Liang, Lei Deng, Shuangchen Li, Pengfei Zuo, Xinfeng Xie, Yu Ji, Yufei Ding, Timothy Sherwood, Yuan Xie, DeepSniffer, an Neural Network Model Extraction Framework by Learning Architecture Hints, to appear in ACM International Conference on Architectural Support for Programming Languages and Operating Systems (ASPLOS), 2020. </li>
+<li><strong>Xing Hu</strong>, Matheus Ogleari, Jishen Zhao, Shuangchen Li, Abanti Basak, Yuan Xie, Persistence parallelism optimization: a holistic approach from memory bus to RDMA network, in IEEE/ACM International Symposium on Microarchitecture (MICRO), pp 494-506, 2018.</li>
+<li><strong>Xing Hu</strong>, Yi Xu, Jun Ma, Guoqing Chen, Yu Hu, and Yuan Xie, Tsocket: Thermal-sustainable power budgeting for dynamic threading, in Design Automation Conference (DAC), pp.181-187, 2014.</li>
+<li><strong>Xing Hu</strong>, Dylan Stow, Yuan Xie, Die stack is happening, in IEEE Micro, pp. 22-28, 2018.</li>
+<li>Lei Deng, Yujie Wu, <strong>Xing Hu</strong>, Ling Liang, Yufei Ding, Guoqi Li, Guangshe Zhao, Peng Li, Yuan Xie. Rethinking the Performance Comparison between SNNs and ANNs, in Neural Networks 2019.</li>
+<li>Wenqing Huangfu, Shuangchen Li, <strong>Xing Hu</strong>, Yuan Xie, RADAR: a 3D-reRAM based DNA alignment accelerator architecture, in Design Automation Conference (DAC), pp. 59-64, 2018. </li>
+<li>Minyu Yan, <strong>Xing Hu</strong>, Shuangchen Li, Abanti Basak, Han Li, Xin Ma, Itir Akgun, Yujing Feng, Peng Gu, Lei Deng, Xiaochun Ye, Zhimin Zhang, Dongrui Fan, Yuan Xie, Alleviating Irregularity in Graph Analytics Acceleration: a Hardware/Software Co-Design Approach, in IEEE/ACM International Symposium on Microarchitecture (MICRO), 2019.</li>
+<li>Mingyu Yan, Lei Deng, <strong>Xing Hu</strong>, Ling Liang, Yujing Feng, Xiaochun Ye, Zhiming Zhang, Dongrui Fan, Yuan Xie, HyGCN: A GCN Accelerator with Hybrid Architecture, in High Performance Computer Architecture (HPCA), 2020. </li>
+<li><strong>Xing Hu</strong>, Yang Zhao, Lei Deng, Ling Liang, Pengfei Zuo, Yingyan Lin, Yuan Xie, Hardware Trojaning in Neural Network Accelerator, to appear in IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (TCAD). </li>
+<li>Yang Zhao, <strong>Xing Hu</strong>, Shuangchen Li, Jing Ye, Lei Deng, Yu Ji, Jianyu Xu, Dong Wu, and Yuan Xie. Memory Trojan Attacks on Neural Network Accelerators, in Design Automation and Test in Europe (DATE), pp. 1402-1407, 2019.</li>
+<li>Xinfeng Xie, <strong>Xing Hu</strong>, Peng Gu, Shuangchen Li, Yu Ji, Yuan Xie, NNBench-X: Benchmarking and Understanding Neural Network Workloads for Accelerator Designs, to appear in Computer Architecture Letter (CAL), pp. 38-42, 2019. </li>
+<li>Mingyu Yan, <strong>Xing Hu</strong>, Shuangchen Li, Itir Akgun, Han Li, Xin Ma, Lei Deng, Xiaochun Ye, Zhimin Zhang, Dongrui Fan, and Yuan Xie, Balancing Memory Accesses for Energy-Efficient Graph Analytics Accelerators, to appear in ACM/IEEE International Symposium on Low Power Electronics and Design (ISLPED), 2019.</li>
+<li>Shuangchen Li, Alvin Oliver Glova, <strong>Xing Hu</strong>, Peng Gu, Dimin Niu, Krishna T. Malladi, Hongzhong Zheng, Yuan Xie, SCOPE: a stochastic computing engine for DRAM-based in-situ accelerator, in IEEE/ACM International Symposium on Microarchitecture (MICRO), pp. 696-709, 2018. </li>
+<li>Wenqin Huangfu, Xueqi Li, Shuangchen Li, <strong>Xing Hu</strong>, Peng Gu, Yuan Xie, MEDAL: Scalable DIMM based Near Data Processing Accelerator for DNA Seeding Algorithm, accepted in IEEE/ACM International Symposium on Microarchitecture, 2019. </li>
+<li>Abanti Basak, <strong>Xing Hu</strong>, Shuangchen Li, Sang Min Oh, Yuan Xie, exploring core and cache hierarchy bottlenecks in graph processing workloads, in Computer Architecture Letter (CAL), pp. 197-200, 2018. </li>
+<li><strong>Xing Hu</strong>, Ling Liang, Lei Deng, Shuangchen Li, Xinfeng Xie, Yu Ji, Yufei Ding, Timothy Sherwood, Yuan Xie, Neural Network Model Extraction Attack by Hearing Architecture Hints, in arxiv 2019.</li>
+<li>Abanti Basak, Shuangchen Li, <strong>Xing Hu</strong>, Sang Min Oh, Yuan Xie, Analysis and Optimization of the Memory Hierarchy for Graph Processing Workloads, in High Performance Computer Architecture (HPCA), pp 373-386, 2019. </li>
+<li>Liu Liu, Lei Deng, Xing Hu, Maohua Zhu, Guoqi Li, Yufei Ding, Yuan Xie, Dynamic Sparse Graph for Efficient Deep Learning, in International Conference on Learning Representations (ICLR), 2019.  </li>
+<li>Lin Ning, Hang Lu, <strong>Xing Hu</strong>, Xiaowei Li, When Deep Learning Meets the Edge: AutoMasking Deep Neural Networks for Efficient Machine Learning on Edge Devices, to appear in IEEE International Conference on Computer Design (ICCD), 2019.</li>
+<li>Yu Ji, Youyang Zhang, Xinfeng Xie, Shuangchen Li, Peiqi Wang, <strong>Xing Hu</strong>, Youhui Zhang, Yuan Xie, FPSA: A Full System Stack Solution for Reconfigurable ReRAM-based NN Accelerator Architecture, in 24th ACM International Conference on Architectural Support for Programming Languages and Operating Systems ASPLOS, pp 733-747, 2019.</li>
+<li>Jilan Lin, Shuangchen Li, <strong>Xing Hu</strong>, Lei Deng, Yuan Xie, CNNWire: Boosting Convolutional Neural Network with Winograd on ReRAM based Accelerators, in Great Lakes Symposium on VLSI (GLSVLSI), pp 283-286, 2019. </li>
+<li>Kun Wu, Guohao Dai, <strong>Xing Hu</strong>, Shuangchen Li, Yu Wang, Yuan Xie, Memory-bounded Proof of Work Acceleration for Block-chain Applications. in Design Automation Conference (DAC), 2019. </li>
+<li>Ling Liang, Lei Deng, Yueling Zeng, <strong>Xing Hu</strong>, Yu Ji, Xin Ma, Guoqi Li, Yuan Xie, Crossbar-aware neural network pruning, in IEEE Access 6:58324-58337, 2018. </li>
+<li>Lei Deng, Ling Liang, G. Wang, Liang Chang, <strong>Xing Hu</strong>, Xin Ma, Liu Liu, Jing Pei, Guoqi Li, and Y. Xie, “SemiMap: A semi-folded convolution mapping for speed-overhead balance on crossbars,” in IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (TCAD), 2018. </li>
+<li>Lei Deng, Zhe Zou, Xin Ma, Ling Liang, Guanrui Wang, <strong>Xing Hu</strong>, Liu Liu, Jing Pei, Guoqi Li, Yuan Xie, Fast Object Tracking on a Many-core Neural Network Chip, in Frontiers in Neuroscience, section Neuromorphic Engineering, 2018. </li>
+<li>Guoqing Chen, Yi Xu, <strong>Xing Hu</strong>, Xiangyang Guo, Jun Ma, Yu Hu, Yuan Xie, TSocket: Thermal-sustainable power budgeting, in ACM Transaction on Design Automation Electrical Systems, 21(2):29, 2016. </li>
+<li><strong>Xing Hu</strong>, Guihai Yan, Yu Hu, and Xiaowei Li, Orchestrator: guarding against voltage emergencies in multi-threaded applications, in IEEE Transactions on VLSI systems, 22(12):2476-2487, 2014. </li>
+<li><strong>Xing Hu</strong>, Yi Xu, Yu Hu, and Yuan Xie, Swimming Lane: a composite design to mitigate voltage droop effects in 3D chips, in Asia and South Pacific Design Automation Conference (ASPDAC), pp. 550-555, 2014. </li>
+<li><strong>Xing Hu</strong>, Guihai Yan, Yu Hu, and Xiaowei Li, Orchestrator: a low-cost solution to reduce voltage emergencies for multi-threaded applications, in proceedings of Conference on Design, Automation and Test in Europe (DATE), pp. 208-213, 2013. </li>
+<li>Songjun Pan, Yu Hu, <strong>Xing Hu</strong>, and Xiaowei Li, A cost-effective substantial-impact-filter based method to tolerate voltage emergencies, in proceedings of Conference on Design, Automation and Test in Europe (DATE), pp. 311-316, 2011.  </li>
 
-<ul><li><strong>Xing Hu</strong>, Ling Liang, Lei Deng, Shuangchen Li, Pengfei Zuo, Xinfeng Xie, Yu Ji, Yufei Ding, Timothy Sherwood, Yuan Xie, DeepSniffer, an Neural Network Model Extraction Framework by Learning Architecture Hints, to appear in ACM International Conference on Architectural Support for Programming Languages and Operating Systems (ASPLOS), 2020. </li><li><strong>Xing Hu</strong>, Matheus Ogleari, Jishen Zhao, Shuangchen Li, Abanti Basak, Yuan Xie, Persistence parallelism optimization: a holistic approach from memory bus to RDMA network, in IEEE/ACM International Symposium on Microarchitecture (MICRO), pp 494-506, 2018.</li><li><strong>Xing Hu</strong>, Yi Xu, Jun Ma, Guoqing Chen, Yu Hu, and Yuan Xie, Tsocket: Thermal-sustainable power budgeting for dynamic threading, in Design Automation Conference (DAC), pp.181-187, 2014.</li><li><strong>Xing Hu</strong>, Dylan Stow, Yuan Xie, Die stack is happening, in IEEE Micro, pp. 22-28, 2018.</li><li>Lei Deng, Yujie Wu, <strong>Xing Hu</strong>, Ling Liang, Yufei Ding, Guoqi Li, Guangshe Zhao, Peng Li, Yuan Xie. Rethinking the Performance Comparison between SNNs and ANNs, in Neural Networks 2019.</li><li>Wenqing Huangfu, Shuangchen Li, <strong>Xing Hu</strong>, Yuan Xie, RADAR: a 3D-reRAM based DNA alignment accelerator architecture, in Design Automation Conference (DAC), pp. 59-64, 2018. </li><li>Minyu Yan, <strong>Xing Hu</strong>, Shuangchen Li, Abanti Basak, Han Li, Xin Ma, Itir Akgun, Yujing Feng, Peng Gu, Lei Deng, Xiaochun Ye, Zhimin Zhang, Dongrui Fan, Yuan Xie, Alleviating Irregularity in Graph Analytics Acceleration: a Hardware/Software Co-Design Approach, in IEEE/ACM International Symposium on Microarchitecture (MICRO), 2019.</li><li>Mingyu Yan, Lei Deng, <strong>Xing Hu</strong>, Ling Liang, Yujing Feng, Xiaochun Ye, Zhiming Zhang, Dongrui Fan, Yuan Xie, HyGCN: A GCN Accelerator with Hybrid Architecture, in High Performance Computer Architecture (HPCA), 2020. </li><li><strong>Xing Hu</strong>, Yang Zhao, Lei Deng, Ling Liang, Pengfei Zuo, Yingyan Lin, Yuan Xie, Hardware Trojaning in Neural Network Accelerator, to appear in IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (TCAD). </li><li>Yang Zhao, <strong>Xing Hu</strong>, Shuangchen Li, Jing Ye, Lei Deng, Yu Ji, Jianyu Xu, Dong Wu, and Yuan Xie. Memory Trojan Attacks on Neural Network Accelerators, in Design Automation and Test in Europe (DATE), pp. 1402-1407, 2019.</li><li>Xinfeng Xie, <strong>Xing Hu</strong>, Peng Gu, Shuangchen Li, Yu Ji, Yuan Xie, NNBench-X: Benchmarking and Understanding Neural Network Workloads for Accelerator Designs, to appear in Computer Architecture Letter (CAL), pp. 38-42, 2019. </li><li>Mingyu Yan, <strong>Xing Hu</strong>, Shuangchen Li, Itir Akgun, Han Li, Xin Ma, Lei Deng, Xiaochun Ye, Zhimin Zhang, Dongrui Fan, and Yuan Xie, Balancing Memory Accesses for Energy-Efficient Graph Analytics Accelerators, to appear in ACM/IEEE International Symposium on Low Power Electronics and Design (ISLPED), 2019.</li><li>Shuangchen Li, Alvin Oliver Glova, <strong>Xing Hu</strong>, Peng Gu, Dimin Niu, Krishna T. Malladi, Hongzhong Zheng, Yuan Xie, SCOPE: a stochastic computing engine for DRAM-based in-situ accelerator, in IEEE/ACM International Symposium on Microarchitecture (MICRO), pp. 696-709, 2018. </li><li>Wenqin Huangfu, Xueqi Li, Shuangchen Li, <strong>Xing Hu</strong>, Peng Gu, Yuan Xie, MEDAL: Scalable DIMM based Near Data Processing Accelerator for DNA Seeding Algorithm, accepted in IEEE/ACM International Symposium on Microarchitecture, 2019. </li><li>Abanti Basak, <strong>Xing Hu</strong>, Shuangchen Li, Sang Min Oh, Yuan Xie, exploring core and cache hierarchy bottlenecks in graph processing workloads, in Computer Architecture Letter (CAL), pp. 197-200, 2018. </li><li><strong>Xing Hu</strong>, Ling Liang, Lei Deng, Shuangchen Li, Xinfeng Xie, Yu Ji, Yufei Ding, Timothy Sherwood, Yuan Xie, Neural Network Model Extraction Attack by Hearing Architecture Hints, in arxiv 2019.</li><li>Abanti Basak, Shuangchen Li, <strong>Xing Hu</strong>, Sang Min Oh, Yuan Xie, Analysis and Optimization of the Memory Hierarchy for Graph Processing Workloads, in High Performance Computer Architecture (HPCA), pp 373-386, 2019. </li><li>Liu Liu, Lei Deng, Xing Hu, Maohua Zhu, Guoqi Li, Yufei Ding, Yuan Xie, Dynamic Sparse Graph for Efficient Deep Learning, in International Conference on Learning Representations (ICLR), 2019.  </li><li>Lin Ning, Hang Lu, <strong>Xing Hu</strong>, Xiaowei Li, When Deep Learning Meets the Edge: AutoMasking Deep Neural Networks for Efficient Machine Learning on Edge Devices, to appear in IEEE International Conference on Computer Design (ICCD), 2019.</li><li>Yu Ji, Youyang Zhang, Xinfeng Xie, Shuangchen Li, Peiqi Wang, <strong>Xing Hu</strong>, Youhui Zhang, Yuan Xie, FPSA: A Full System Stack Solution for Reconfigurable ReRAM-based NN Accelerator Architecture, in 24th ACM International Conference on Architectural Support for Programming Languages and Operating Systems ASPLOS, pp 733-747, 2019.</li><li>Jilan Lin, Shuangchen Li, <strong>Xing Hu</strong>, Lei Deng, Yuan Xie, CNNWire: Boosting Convolutional Neural Network with Winograd on ReRAM based Accelerators, in Great Lakes Symposium on VLSI (GLSVLSI), pp 283-286, 2019. </li><li>Kun Wu, Guohao Dai, <strong>Xing Hu</strong>, Shuangchen Li, Yu Wang, Yuan Xie, Memory-bounded Proof of Work Acceleration for Block-chain Applications. in Design Automation Conference (DAC), 2019. </li><li>Ling Liang, Lei Deng, Yueling Zeng, <strong>Xing Hu</strong>, Yu Ji, Xin Ma, Guoqi Li, Yuan Xie, Crossbar-aware neural network pruning, in IEEE Access 6:58324-58337, 2018. </li><li>Lei Deng, Ling Liang, G. Wang, Liang Chang, <strong>Xing Hu</strong>, Xin Ma, Liu Liu, Jing Pei, Guoqi Li, and Y. Xie, “SemiMap: A semi-folded convolution mapping for speed-overhead balance on crossbars,” in IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (TCAD), 2018. </li><li>Lei Deng, Zhe Zou, Xin Ma, Ling Liang, Guanrui Wang, <strong>Xing Hu</strong>, Liu Liu, Jing Pei, Guoqi Li, Yuan Xie, Fast Object Tracking on a Many-core Neural Network Chip, in Frontiers in Neuroscience, section Neuromorphic Engineering, 2018. </li><li>Guoqing Chen, Yi Xu, <strong>Xing Hu</strong>, Xiangyang Guo, Jun Ma, Yu Hu, Yuan Xie, TSocket: Thermal-sustainable power budgeting, in ACM Transaction on Design Automation Electrical Systems, 21(2):29, 2016. </li><li><strong>Xing Hu</strong>, Guihai Yan, Yu Hu, and Xiaowei Li, Orchestrator: guarding against voltage emergencies in multi-threaded applications, in IEEE Transactions on VLSI systems, 22(12):2476-2487, 2014. </li><li><strong>Xing Hu</strong>, Yi Xu, Yu Hu, and Yuan Xie, Swimming Lane: a composite design to mitigate voltage droop effects in 3D chips, in Asia and South Pacific Design Automation Conference (ASPDAC), pp. 550-555, 2014. </li><li><strong>Xing Hu</strong>, Guihai Yan, Yu Hu, and Xiaowei Li, Orchestrator: a low-cost solution to reduce voltage emergencies for multi-threaded applications, in proceedings of Conference on Design, Automation and Test in Europe (DATE), pp. 208-213, 2013. </li><li>Songjun Pan, Yu Hu, <strong>Xing Hu</strong>, and Xiaowei Li, A cost-effective substantial-impact-filter based method to tolerate voltage emergencies, in proceedings of Conference on Design, Automation and Test in Europe (DATE), pp. 311-316, 2011.  </li></ul>
-
+</ul>
 <h2>Patents</h2>
+<ul>
+<li>Data transmission method and apparatus, Xing Hu, Yu Hu, Xiaowei Li, WO2015058696. </li>
+<li>Voltage droop mitigation in 3D chip system, Yi Xu, Xing Hu, Yuan Xie, US 9595508 </li>
 
-<ul><li>Data transmission method and apparatus, Xing Hu, Yu Hu, Xiaowei Li, WO2015058696. </li><li>Voltage droop mitigation in 3D chip system, Yi Xu, Xing Hu, Yuan Xie, US 9595508 </li></ul>
-
+</ul>
 <h2>Awards</h2>
+<ul>
+<li>2016 - Huawei President Special Group Award</li>
+<li>2014 - The Dean&#39;s Special Award of Chinese Academy of Sciences (TOP 1%) </li>
+<li>2013 - Director of Special Scholarship in ICT, CAS (TOP 1%); </li>
 
-<ul><li>2016 - Huawei President Special Group Award</li><li>2014 - The Dean&#39;s Special Award of Chinese Academy of Sciences (TOP 1%) </li><li>2013 - Director of Special Scholarship in ICT, CAS (TOP 1%); </li></ul>
-
+</ul>
 <h2>Additional Professional Service</h2>
+<ul>
+<li>HPCA17 Submission Chair </li>
+<li>DAC20 Session Co-chair</li>
+<li>ICCAD20 TPC</li>
 
-<ul><li>HPCA17 Submission Chair </li><li>DAC20 Session Co-chair</li><li>ICCAD20 TPC</li></ul>
-
-<h2>Reviewer for Journals</h2>
-
+</ul>
+<h2>Reviewer for Journals </h2>
 <p>TC, TCAD, TVLSI, TACO, etc.</p>
